[workspace]

members = [
    "mint",
    "types",
    "mint-manager"
]

[workspace.metadata]
authors = ["thesimplekid"]
edition = "2021"
description = "cashu-rs-mint"
readme = "README.md"
repository = "https://github.com/thesimplekid/cashu-rs-mint"
license-file = "LICENSE"
keywords = ["bitcoin", "e-cash", "cashu"]

[workspace.dependencies]
# cashu-crab = { path = "../cashu-crab" }
cashu-crab = { git = "https://github.com/thesimplekid/cashu-crab"}
bitcoin = { version = "0.30.0", features = ["no-std"] }
serde = "1.0.164"
serde_json = "1.0.96"
nostr = { version = "0.22.0", default-features = false }
jwt-compact = "0.8.0-beta.1"