[workspace]
resolver = "2"

members = [
    "crates/mint",
    "crates/mint-manager"
]

[workspace.metadata]
authors = ["thesimplekid"]
edition = "2021"
description = "cashu-rs-mint"
readme = "README.md"
repository = "https://github.com/thesimplekid/cashu-rs-mint"
license-file = "LICENSE"
keywords = ["bitcoin", "e-cash", "cashu"]

[workspace.dependencies]
anyhow = "1.0.71"
# cashu-crab = { path = "../cashu-crab" }
cashu-sdk = { git = "https://github.com/thesimplekid/cashu-crab", rev = "b1a12525d27c2ce35a06b05a1def23825ead2644", default-features = false, features = ["mint"] }
bitcoin = { version = "0.30.0", features = ["no-std"] }
serde = "1.0.164"
serde_json = "1.0.96"
nostr = { version = "0.22.0", default-features = false }
jwt-compact = "0.8.0-beta.1"
# ln-rs = { path = "../ln-rs/crates/ln-rs" }
ln-rs = { git = "https://github.com/thesimplekid/ln-rs", rev = "782e7ffd86ec1bb2fad264b7a17d4f30e8fb3453", default-features = false, features = ["cln"] }
url = "2.4.0"
