profile = {}
[package]
name = "cashu-rs-mint"
version = "0.1.0"
edition = "2021"
authors = ["thesimplekid"]
description = "cashu-rs-mint"
readme = "README.md"
repository = "https://github.com/thesimplekid/cashu-rs-mint"
license-file = "LICENSE"
keywords = ["bitcoin", "e-cash", "cashu"]


[dependencies]
async-trait = "0.1.77"
axum = "0.6.18"
axum-macros = "0.3.7"
cln-rpc = "0.1.3"
config = { version = "0.13.3", features = ["toml"] }
dirs = "5.0.1"
futures = "0.3.28"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
rand = "0.8.5"
bip39 = { version = "2.0.0", features = ["rand_core"] }
bitcoin_hashes = "0.12.0"
tower-http = { version = "0.4.1", features = ["cors"] }
bech32 = "0.9.1"
hex = "0.4.3"
axum-extra = { version = "0.7.4", features = ["cookie"] }
time = "0.3.22"
chrono = "0.4.26"
clap = { version = "4.3.14", features = ["env", "default", "derive"]}
anyhow = "1.0.71"
cashu-sdk = { git = "https://github.com/thesimplekid/cashu-crab", rev = "be2b51b", default-features = false, features = ["mint", "all-nuts", "redb"] }
# cashu-sdk = { path = "../cashu-crab/main/crates/cashu-sdk", default-features = false, features = ["mint", "all-nuts", "redb"] }
bitcoin = { version = "0.30.0", features = ["no-std"] }
serde = "1.0.164"
serde_json = "1.0.96"
nostr = { version = "0.22.0", default-features = false }
# ln-rs = { path = "../ln-rs/crates/ln-rs" }
ln-rs = { git = "https://github.com/thesimplekid/ln-rs", rev = "a16e2926c0585d140abf844513606f9ce7e3fb24", default-features = false, features = ["cln"] }
url = "2.4.0"
