[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
node-manager-types = { path = "../types" }
gloo-net = "0.3.0"
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen-futures = "0.4.37"
yew = { version="0.20", features=["csr"] }
cashu-crab = { workspace = true }
bitcoin = { workspace = true }
log = "0.4.19"
wasm-logger = "0.2.0"
web-sys = "0.3.64"
gloo = "0.8.1"
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
nostr = { workspace = true }
gloo-storage = "0.2.2"
anyhow = "1.0.71"
jwt-compact = { workspace = true }