[package]
name = "cashu-rs-mint"
version = "0.1.0"
edition = "2021"


[dependencies]
node-manager-types = {path="../types"}
anyhow = "1.0.71"
async-trait = "0.1.68"
axum = "0.6.18"
axum-macros = "0.3.7"
cashu-crab = { workspace = true }
cln-rpc = "0.1.3"
config = { version = "0.13.3", features = ["toml"] }
dirs = "5.0.1"
futures = "0.3.28"
gl-client = { git = "ssh://git@github.com/Blockstream/greenlight" }
redb = "1.0.4"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.3.4", features = ["v4", "fast-rng"] }
rand = "0.8.5"
bip39 = { version = "2.0.0", features = ["rand_core"] }
bitcoin_hashes = "0.12.0"
ldk-node = "0.1.0"
bitcoin = { workspace = true }
tower-http = { version = "0.4.1", features = ["cors"] }
bech32 = "0.9.1"
hex = "0.4.3"
url = "2.4.0"
nostr = { workspace = true }
jsonwebtoken = "8.3.0"
axum-extra = { version = "0.7.4", features = ["cookie"] }
time = "0.3.22"
